<resources>
    <string name="app_name">Sorteos de Loteria Nicaragua</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">2026.04.1.15.1</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Resultados</string>
    <string name="menu_gallery">Resultados ateriores</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_send">Send</string>
    <string name="share_app_msg">Compartir app</string>
    <string name="rate">Valorar app</string>
    <string name="ads_intersticial">ca-app-pub-9964109306515647/2063634016</string>
    <string name="ads_banner">ca-app-pub-9964109306515647/9119244640</string>
    <string name="ads_native">ca-app-pub-9964109306515647/8014300740</string>
    <string name="ads_fallback_banner">ca-app-pub-9964109306515647/8352900170</string>
    <string name="prev_results">Resultados anteriores</string>
    <string name="accept">Aceptar</string>
    <string name="no_data_chart">No hay datos para mostrar</string>

</resources>
