<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <compartir_app  android:id="@+id/nav_share"/>
    <valorar_app  android:id="@+id/nav_send"/>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.resultados.loto.lotonicaragua.ui.home.ResultsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_previousResultsFragment"
            app:destination="@id/nav_prev_results" />
        <action
            android:id="@+id/action_nav_home_to_nav_diaria_stats"
            app:destination="@id/nav_diaria_stats" />
        <action
            android:id="@+id/action_nav_home_to_fechaStatsFragment"
            app:destination="@id/fechaStatsFragment" />

    </fragment>

    <fragment
        android:id="@+id/nav_diaria_stats"
        android:name="com.resultados.loto.lotonicaragua.ui.stats.DiariaStatsFragment"
        android:label="Estadisticas Diaria"
        tools:layout="@layout/fragment_diaria_stats" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.resultados.loto.lotonicaragua.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.resultados.loto.lotonicaragua.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share2"
        android:name="com.resultados.loto.lotonicaragua.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send2"
        android:name="com.resultados.loto.lotonicaragua.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_prev_results"
        android:name="com.resultados.loto.lotonicaragua.ui.PreviousResultsFragment"
        android:label="@string/prev_results" >
        <argument
            android:name="sorteo"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
    <fragment
        android:id="@+id/fechaStatsFragment"
        android:name="com.resultados.loto.lotonicaragua.ui.stats.FechaStatsFragment"
        android:label="Estadisticas Fechas" />
</navigation>